# n8n-test

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  checklist.jsonl  pyproject.toml
src/: main.py  value.py
src/controller/: chat_controller.py
src/neural_hub/: __init__.py  main.py  settings.py
src/neural_hub/models/: __init__.py  database.py  schemas.py
src/neural_hub/repositories/: database.py  generation_repository.py  model_recommendation_repository.py  s3_repository.py
src/neural_hub/routes/: default.py  template.py
src/neural_hub/services/: dependencies.py  document_service.py  kiro_service.py  template_service.py
src/neural_hub/utils/: logger.py
src/neural_hub/utils/exceptions/: __init__.py  error_codes.py  error_responses.py  exceptions.py
src/service/: llm_service.py
tests/: conftest.py
tests/routes/: __init__.py  test_default.py  test_template.py
tests/services/: test_document_service.py  test_kiro_service.py  test_template_service.py
