[project]
name = "neural-hub"
version = "1.0.0"
description = "Neural Hub - Kiro Template Integration API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.30.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "boto3==1.38.27",
    "python-dotenv==1.1.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.1",
    "ruff==0.11.12",
    "coverage==7.8.0",
    "diff-cover==9.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src/neural_hub"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
